# Coding

./: .clang-format  .gitignore  .p10k.zsh  .vscode  .zshrc
Auxiliary_Files/: .clangd  Makefile  epoll.c  epoll.h  myselfc.h
Auxiliary_Files/include/: leetcode.h  myselfc.h
Auxiliary_Files/lib/: libepoll.dylib  libmydarwin.dylib  libworkflow.0.dylib  libworkflow.dylib
Auxiliary_Files/src/: epoll.c  epoll.c.bak  readme.txt  timerfd.c
Cpp_Code/: 54.螺旋矩阵.cpp
Cpp_Code/Classic150/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  1.cpp  1.two_sum.cpp  10.cpp  11.Container_With_Most_Water.cpp  11.cpp  12.IVX_to_int.cpp  12.cpp  126.palindrome_str.cpp  128.longest-consecutive-sequence.cpp  1282.group-the-people-given-the-group-size-they-belong-to.cpp  13.convertIVX.cpp  134.cpp  135.cpp  14.max_prefix.cpp  141.linked-list-cycle.cpp  15.135.cpp  15.3Sum.cpp  (+44 more)
Linux_C_Code/day2-19/: CMakeLists.txt
Linux_C_Code/day2-19/.cache/clangd/index/: client.c.FD68AA0F949D8F4C.idx  epoll.c.92152E6AA669E9D6.idx  epoll_func.c.F477518F77372553.idx  main.c.D12C5C222C3ABCBA.idx  process_pool.h.D1DEB6B0230BC76E.idx  tcp_init.c.719910D7F00B3904.idx  test.c.F9E3BCF0F740450F.idx  trans_fd.c.C6B781C02D208619.idx  trans_file.c.0EE2897A268E3830.idx  worker.c.1D95F1C8BAB77259.idx
Linux_C_Code/day2-19/client/: Makefile
Linux_C_Code/day2-19/client/src/: client.c
Linux_C_Code/day2-19/server/: Makefile  epoll.c  main.c  process_pool.h  server  worker.c
Linux_C_Code/day2-19/server/src/: epoll_func.c  main.c  process_pool.h  tcp_init.c  trans_fd.c  trans_file.c  worker.c
(+399 files in other folders)
